fix(notice): text align left

--- a/site/client/css/content.scss
+++ b/site/client/css/content.scss
@@ -239,8 +239,7 @@
         @include info;
         margin-top: 1rem;
         margin-bottom: 2rem;
-        padding: 0.625rem;
-        text-align: center;
+        padding: $vertical-spacing $padding-x-sm;
         background-color: $tertiary-color;
         h2 {
             span {
@@ -257,8 +256,7 @@
         @include info;
         margin-top: 1rem;
         margin-bottom: 2rem;
-        padding: 0.625rem;
-        text-align: center;
+        padding: $vertical-spacing $padding-x-sm;
         background-color: $tertiary-color;
         .title {
             font-weight: bold;
