--- a/site/client/css/mixins.scss
+++ b/site/client/css/mixins.scss
@@ -14,7 +14,6 @@
 
     p {
         margin-top: 0;
-        margin-bottom: 0.5rem;
         &:last-child {
             margin-bottom: 0;
         }
